--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <footer>
         <p id="footer">&copy;Setor de TI</p>
     </footer>
-    <script src="/scripts/verificar.js"></script>
+    <script src="verificar.js"></script>
 </body>
 
 </html>
